k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-backend
  labels:
    app: incident-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: incident-backend
  template:
    metadata:
      labels:
        app: incident-backend
    spec:
      containers:
        - name: backend
          image: jordanmeudje/incident-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
