k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-frontend
  labels:
    app: incident-frontend
spec:
  type: NodePort
  selector:
    app: incident-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
