k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-mysql
  labels:
    app: incident-mysql
spec:
  type: ClusterIP
  selector:
    app: incident-mysql
  ports:
    - port: 3306
      targetPort: 3306
